--- a/src/aggregationsinfrastruktur/pom.xml
+++ b/src/aggregationsinfrastruktur/pom.xml
@@ -19,6 +19,35 @@
       <artifactId>jersey-container-servlet-core</artifactId>
       <version>2.22.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4-1201-jdbc41</version>
+    </dependency>
+ <dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-core</artifactId>
+	<version>2.7.2</version>
+</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.7.2</version>
+</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.7.2</version>
+</dependency>
+
+
+<dependency>
+	<groupId>com.fasterxml.jackson.jaxrs</groupId>
+	<artifactId>jackson-jaxrs-json-provider</artifactId>
+	<version>2.7.2</version>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>aggregationsinfrastruktur</finalName>
