--- a/src/aggregationsinfrastruktur/src/main/resources/org/catais/ai/dao/dao.properties
+++ b/src/aggregationsinfrastruktur/src/main/resources/org/catais/ai/dao/dao.properties
@@ -1,4 +1,4 @@
-rosebud2.jdbc.url = jdbc:postgresql://localhost:5432/rosebud2
-rosebud2.jdbc.driver = org.postgresql.Driver
-rosebud2.jdbc.username = stefan
-rosebud2.jdbc.password = ziegler12
+xanadu2.jdbc.url = jdbc:postgresql://localhost:5432/xanadu2
+xanadu2.jdbc.driver = org.postgresql.Driver
+xanadu2.jdbc.username = stefan
+xanadu2.jdbc.password = ziegler12
